StrictMode / javac Werror / illegal-access=deny (#247)